layout adjustments - fix horizontal scroll

--- a/public/css/pg-events.css
+++ b/public/css/pg-events.css
@@ -25,6 +25,7 @@
 
 .page-header #page-header-bg:after {
   height: 240px;
+  width: 100vw;
   content: "";
   position: absolute;
   left: 0;
@@ -58,6 +59,7 @@
   margin-bottom: 12px;
   margin-left: -15px;
   margin-right: -15px;
+  max-width: 100vw !important;
 }
 
 .event-row-title h2 {
